# llm-embed-bedrock

./: .gitignore  README.md  llm_embed_bedrock.py  pyproject.toml  setup.mk
.github/workflows/: ruff.yml
